@@ -2,7 +2,6 @@ package com.atsushini.seatreservation.service;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
@@ -22,14 +21,15 @@ public class SeatService {
     public List<SeatDto> findByFloor(Floor floor) {
         List<Seat> seats = seatRepository.findByFloor(floor);
         return seats.stream().map(seat -> {
-            SeatDto seatDto = new SeatDto();
-            seatDto.setId(seat.getId());
-            seatDto.setBounds(
-                    new SeatDto.Bounds(
-                            Arrays.asList(seat.getStartLat(), seat.getStartLng()),
-                            Arrays.asList(seat.getEndLat(), seat.getEndLng())));
+            SeatDto.Bounds bounds = new SeatDto.Bounds(
+                    Arrays.asList(seat.getStartLat(), seat.getStartLng()),
+                    Arrays.asList(seat.getEndLat(), seat.getEndLng()));
+            SeatDto seatDto = SeatDto.builder()
+                    .id(seat.getId())
+                    .bounds(bounds)
+                    .build();
             return seatDto;
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
 }
